[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-kit"
authors = [
  { name="ego-lay-atman-bay" },
]
description = " Read ark files in the My Little Pony Gameloft game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
ark = [
  "zstandard",
  "dataclasses-struct",
  "lxml",
]

loc = []

audio = [
  "vxn-py",
  "filetype",
]

xml = [
  "lxml",
  "dataclasses-struct",
]

texatlas = [
  "Pillow",
]

pvr = [
  "dataclasses-struct",
  "Pillow",
  # "astc-encoder-py",
  "texture2ddecoder",
]

model = [
  "dataclasses-struct",
  "numpy",
  "pygltflib",
  "datauri",
  "scipy",
  
  "Pillow",
  # "astc-encoder-py",
  "texture2ddecoder",
]

# Minimal model dependencies (for rk-blender)
rk = [
  "dataclasses-struct",
  "numpy",
  # "astc-encoder-py",
  "Pillow",
  "texture2ddecoder",
]

download = [
  "requests",
  "furl",
]

cli = [
  "rich",

  "zstandard",
  "dataclasses-struct",

  "Pillow",

  "lxml",
  "charset-normalizer",

  # "astc-encoder-py",
  "texture2ddecoder",

  "vxn-py",
  "filetype",
  # "numpy",
  # "pygltflib",
  # "scipy",
  
  "requests",
  "furl",
]

all = [
  "zstandard",
  "dataclasses-struct",

  "Pillow",

  "lxml",
  "charset-normalizer",

  # "astc-encoder-py",
  "texture2ddecoder",

  "vxn-py",
  "filetype",

  "numpy",
  "pygltflib",
  "datauri",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/ego-lay-atman-bay/luna-kit"
"Bug Tracker" = "https://github.com/ego-lay-atman-bay/luna-kit/issues"
# "Documentation" = "https://ego-lay-atman-bay.github.io/luna-kit/"

[tool.setuptools]
package-dir = {"luna_kit" = "luna_kit"}

[tool.setuptools.dynamic]
version = { attr = "luna_kit.__version__" }

[project.scripts]
luna-kit = 'luna_kit.__main__:main'
